# virtual-piano

./: .gitignore  README.md  default.nix  shell.nix  stack.yaml  virtual-piano.cabal
nix/: main.nix
src/: Main.hs
